parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    VAR

Grammar

Rule 0     S' -> start
Rule 1     start -> create
Rule 2     start -> show
Rule 3     start -> select
Rule 4     create -> CREATE create_body
Rule 5     show -> SHOW CREATE TABLE NAME
Rule 6     select -> SELECT select_body
Rule 7     create_body -> TABLE NAME LPAREN values RPAREN
Rule 8     select_body -> columns FROM NAME
Rule 9     select_body -> LPAREN columns RPAREN FROM NAME
Rule 10    values -> var
Rule 11    values -> values COMMA var
Rule 12    var -> NAME type
Rule 13    columns -> column_name
Rule 14    columns -> columns COMMA column_name
Rule 15    column_name -> NAME
Rule 16    type -> int
Rule 17    type -> str
Rule 18    type -> bol

Terminals, with rules where they appear

COMMA                : 11 14
CREATE               : 4 5
FROM                 : 8 9
LPAREN               : 7 9
NAME                 : 5 7 8 9 12 15
RPAREN               : 7 9
SELECT               : 6
SHOW                 : 5
TABLE                : 5 7
VAR                  : 
bol                  : 18
error                : 
int                  : 16
str                  : 17

Nonterminals, with rules where they appear

column_name          : 13 14
columns              : 8 9 14
create               : 1
create_body          : 4
select               : 3
select_body          : 6
show                 : 2
start                : 0
type                 : 12
values               : 7 11
var                  : 10 11

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . create
    (2) start -> . show
    (3) start -> . select
    (4) create -> . CREATE create_body
    (5) show -> . SHOW CREATE TABLE NAME
    (6) select -> . SELECT select_body

    CREATE          shift and go to state 5
    SHOW            shift and go to state 6
    SELECT          shift and go to state 7

    start                          shift and go to state 1
    create                         shift and go to state 2
    show                           shift and go to state 3
    select                         shift and go to state 4

state 1

    (0) S' -> start .



state 2

    (1) start -> create .

    $end            reduce using rule 1 (start -> create .)


state 3

    (2) start -> show .

    $end            reduce using rule 2 (start -> show .)


state 4

    (3) start -> select .

    $end            reduce using rule 3 (start -> select .)


state 5

    (4) create -> CREATE . create_body
    (7) create_body -> . TABLE NAME LPAREN values RPAREN

    TABLE           shift and go to state 9

    create_body                    shift and go to state 8

state 6

    (5) show -> SHOW . CREATE TABLE NAME

    CREATE          shift and go to state 10


state 7

    (6) select -> SELECT . select_body
    (8) select_body -> . columns FROM NAME
    (9) select_body -> . LPAREN columns RPAREN FROM NAME
    (13) columns -> . column_name
    (14) columns -> . columns COMMA column_name
    (15) column_name -> . NAME

    LPAREN          shift and go to state 14
    NAME            shift and go to state 13

    select_body                    shift and go to state 11
    columns                        shift and go to state 12
    column_name                    shift and go to state 15

state 8

    (4) create -> CREATE create_body .

    $end            reduce using rule 4 (create -> CREATE create_body .)


state 9

    (7) create_body -> TABLE . NAME LPAREN values RPAREN

    NAME            shift and go to state 16


state 10

    (5) show -> SHOW CREATE . TABLE NAME

    TABLE           shift and go to state 17


state 11

    (6) select -> SELECT select_body .

    $end            reduce using rule 6 (select -> SELECT select_body .)


state 12

    (8) select_body -> columns . FROM NAME
    (14) columns -> columns . COMMA column_name

    FROM            shift and go to state 18
    COMMA           shift and go to state 19


state 13

    (15) column_name -> NAME .

    FROM            reduce using rule 15 (column_name -> NAME .)
    COMMA           reduce using rule 15 (column_name -> NAME .)
    RPAREN          reduce using rule 15 (column_name -> NAME .)


state 14

    (9) select_body -> LPAREN . columns RPAREN FROM NAME
    (13) columns -> . column_name
    (14) columns -> . columns COMMA column_name
    (15) column_name -> . NAME

    NAME            shift and go to state 13

    columns                        shift and go to state 20
    column_name                    shift and go to state 15

state 15

    (13) columns -> column_name .

    FROM            reduce using rule 13 (columns -> column_name .)
    COMMA           reduce using rule 13 (columns -> column_name .)
    RPAREN          reduce using rule 13 (columns -> column_name .)


state 16

    (7) create_body -> TABLE NAME . LPAREN values RPAREN

    LPAREN          shift and go to state 21


state 17

    (5) show -> SHOW CREATE TABLE . NAME

    NAME            shift and go to state 22


state 18

    (8) select_body -> columns FROM . NAME

    NAME            shift and go to state 23


state 19

    (14) columns -> columns COMMA . column_name
    (15) column_name -> . NAME

    NAME            shift and go to state 13

    column_name                    shift and go to state 24

state 20

    (9) select_body -> LPAREN columns . RPAREN FROM NAME
    (14) columns -> columns . COMMA column_name

    RPAREN          shift and go to state 25
    COMMA           shift and go to state 19


state 21

    (7) create_body -> TABLE NAME LPAREN . values RPAREN
    (10) values -> . var
    (11) values -> . values COMMA var
    (12) var -> . NAME type

    NAME            shift and go to state 26

    values                         shift and go to state 27
    var                            shift and go to state 28

state 22

    (5) show -> SHOW CREATE TABLE NAME .

    $end            reduce using rule 5 (show -> SHOW CREATE TABLE NAME .)


state 23

    (8) select_body -> columns FROM NAME .

    $end            reduce using rule 8 (select_body -> columns FROM NAME .)


state 24

    (14) columns -> columns COMMA column_name .

    FROM            reduce using rule 14 (columns -> columns COMMA column_name .)
    COMMA           reduce using rule 14 (columns -> columns COMMA column_name .)
    RPAREN          reduce using rule 14 (columns -> columns COMMA column_name .)


state 25

    (9) select_body -> LPAREN columns RPAREN . FROM NAME

    FROM            shift and go to state 29


state 26

    (12) var -> NAME . type
    (16) type -> . int
    (17) type -> . str
    (18) type -> . bol

    int             shift and go to state 31
    str             shift and go to state 32
    bol             shift and go to state 33

    type                           shift and go to state 30

state 27

    (7) create_body -> TABLE NAME LPAREN values . RPAREN
    (11) values -> values . COMMA var

    RPAREN          shift and go to state 34
    COMMA           shift and go to state 35


state 28

    (10) values -> var .

    RPAREN          reduce using rule 10 (values -> var .)
    COMMA           reduce using rule 10 (values -> var .)


state 29

    (9) select_body -> LPAREN columns RPAREN FROM . NAME

    NAME            shift and go to state 36


state 30

    (12) var -> NAME type .

    RPAREN          reduce using rule 12 (var -> NAME type .)
    COMMA           reduce using rule 12 (var -> NAME type .)


state 31

    (16) type -> int .

    RPAREN          reduce using rule 16 (type -> int .)
    COMMA           reduce using rule 16 (type -> int .)


state 32

    (17) type -> str .

    RPAREN          reduce using rule 17 (type -> str .)
    COMMA           reduce using rule 17 (type -> str .)


state 33

    (18) type -> bol .

    RPAREN          reduce using rule 18 (type -> bol .)
    COMMA           reduce using rule 18 (type -> bol .)


state 34

    (7) create_body -> TABLE NAME LPAREN values RPAREN .

    $end            reduce using rule 7 (create_body -> TABLE NAME LPAREN values RPAREN .)


state 35

    (11) values -> values COMMA . var
    (12) var -> . NAME type

    NAME            shift and go to state 26

    var                            shift and go to state 37

state 36

    (9) select_body -> LPAREN columns RPAREN FROM NAME .

    $end            reduce using rule 9 (select_body -> LPAREN columns RPAREN FROM NAME .)


state 37

    (11) values -> values COMMA var .

    RPAREN          reduce using rule 11 (values -> values COMMA var .)
    COMMA           reduce using rule 11 (values -> values COMMA var .)

